<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.helloandroid.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/intro_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/large_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <ImageView
            android:id="@+id/new_skills"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/new_skills_image"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:src="@drawable/new_skills"/>

        <TextView
            android:id="@+id/mission_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/mission"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <ImageView
            android:id="@+id/colorful"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/new_skills_image"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:src="@drawable/udacity_vr"/>

        <TextView
            android:id="@+id/end_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#7D97AD"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/address"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#7D97AD"
            android:autoLink="map"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#7D97AD"
            android:autoLink="phone"/>

        <TextView
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/web_link"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#7D97AD"
            android:autoLink="web"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
